--- a/contact.html
+++ b/contact.html
@@ -82,12 +82,12 @@
 		<details>
 		  <summary>Frequently asked questions</summary>
 			<ul>
-			 <li>Coronavirus-related support</li>
-			 <li>Cancellations</li>
-			 <li>Payments</li>
-			 <li>Booking details</li>
-			 <li>Pricing</li>
-			 <li>Referal rewards</li>
+			 <li><a href="#">Coronavirus-related support</a></li>
+			 <li><a href="#">Cancellations</a></li>
+			 <li><a href="#">Payments</a></li>
+			 <li><a href="#">Booking details</a></li>
+			 <li><a href="#">Pricing</a></li>
+			 <li><a href="#">Referal rewards</a></li>
 			</ul>
 		</details>
 		
