--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,7 @@
 			</fieldset>
 		</form>
 		<br><br>
+		<fieldset>
 		<details>
 		  <summary>Frequently asked questions</summary>
 			<ul>
@@ -89,7 +90,9 @@
 			 <li><a href="#">Pricing</a></li>
 			 <li><a href="#">Referal rewards</a></li>
 			</ul>
+			
 		</details>
+		</fieldset>
 		
 		<picture>
 			<img class="home-promotion" src="../images/home-promotion.png" alt="Home Promotion" width="1080" height="520">
