--- a/contact.html
+++ b/contact.html
@@ -70,28 +70,28 @@
 			<fieldset>
 			  <h2>Customer Service Help</h2>
 			  <label for="fname">Confirmation number:</label>
-			  <input type="text" id="fname" name="fname" placeholder="Confirmation" title="NYDH3"><br><br>
+			  <input type="text" id="fname" name="fname" placeholder="NYDH3"><br><br>
 			  <label for="lname">Last name:</label>
-			  <input type="text" id="lname" name="lname" placeholder="last name" title="Last Name"><br><br>
+			  <input type="text" id="lname" name="lname" placeholder="last name"><br><br>
 			  <label for="email">Email:</label>
-			  <input type="email" id="email" name="email" placeholder="EMAIL" title="Your email"><br><br>
+			  <input type="email" id="email" name="email" placeholder="Your email"><br><br>
 			  <input type="submit" value="Check my booking">
 			</fieldset>
 		</form>
 		<br><br>
 		<fieldset>
-		<details>
-		  <summary>Frequently asked questions</summary>
-			<ul>
-			 <li><a href="#">Coronavirus-related support</a></li>
-			 <li><a href="#">Cancellations</a></li>
-			 <li><a href="#">Payments</a></li>
-			 <li><a href="#">Booking details</a></li>
-			 <li><a href="#">Pricing</a></li>
-			 <li><a href="#">Referal rewards</a></li>
-			</ul>
+			<details>
+			  <summary>Frequently asked questions</summary>
+				<ul>
+				 <li><a href="#">Coronavirus-related support</a></li>
+				 <li><a href="#">Cancellations</a></li>
+				 <li><a href="#">Payments</a></li>
+				 <li><a href="#">Booking details</a></li>
+				 <li><a href="#">Pricing</a></li>
+				 <li><a href="#">Referal rewards</a></li>
+				</ul>
 			
-		</details>
+			</details>
 		</fieldset>
 		
 		<picture>
