Added HTML Table for Customer Review

--- a/html/about.html
+++ b/html/about.html
@@ -16,6 +16,7 @@
       height: 100%;
       margin: 0;
       font-family: "Crimson Pro", serif;
+      font-size: 16px;
       background-color: #150941;
     }
 
@@ -35,10 +36,6 @@
 
     .core-color {
       color: #f80040;
-    }
-
-    main {
-      padding-top: 30px;
     }
   </style>
 </head>
@@ -91,7 +88,8 @@
       </div>
       <div>
         <article class="article-content">
-          <h2 class="content-head-text">Safety & Hygine</h2>
+          <h2 class="content-head-text">We are committed to resolve your problems</h2>
+          <h3 class="content-head-text">Safety & Hygine</h3>
           <p class="article-text">
             Our Staffs are well experienced in several categories and trained to serve
             each and every passenger in our flights. Our top priority is always AVIATION
@@ -110,10 +108,87 @@
             <img class="content-image" src="../images/heath-safety.png" alt="Welcome to Cango Airways" />
           </picture>
         </aside>
+
+        <article class="article-content">
+          <h3 class="content-head-text">World Class Experience</h3>
+          <p class="article-text">
+            CanGo Airways offers the best in the airline industry’s most ranges of in-flight 
+            cabins experience across its long-haul and short-haul networks. It is one of the 
+            worldwide airlines to offer four cabins on long-distance flights and remains strongly 
+            committed to providing unparallel experience in economy and premium class cabin. 
+            It means the airline can offer incomparable quality service and for the money fares for all customers.
+          </p>
+          <p class="article-text">
+            The CanGo airline implemented plans in 2009 in a major upgrade of the airline’s 
+            in-flight entertainment systems in all cabins. The introduction of ‘audio, visual contents’ 
+            means that customers can select a performance, movies or music content and control as they 
+            prefer during the flight, during rest, eat or work.
+          </p>
+        </article>
+
+        <aside class="rating-container">
+          <h3 class="content-head-text">Customer Reviews</h3>
+          <table id="rating-table">
+            <tr>
+              <th>Category</th>
+              <th>Rating</th>
+            </tr>
+            <tr>
+              <td>Food & Beverages</td>
+              <td>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+              </td>
+            </tr>
+            <tr>
+              <td>Inflight Entertainment</td>
+              <td>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size"></span>
+              </td>
+            </tr>
+            <tr>
+              <td>Seat Comfort</td>
+              <td>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+              </td>
+            </tr>
+            <tr>
+              <td>Staff Service</td>
+              <td>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+              </td>
+            </tr>
+            <tr>
+              <td>Value for Money</td>
+              <td>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size checked"></span>
+                <span class="fa fa-star star-size"></span>
+                <span class="fa fa-star star-size"></span>
+              </td>
+            </tr>
+          </table>
+        </aside>
       </div>
       <div>
         <article class="article-content">
-          <h2 class="content-head-text">Facts and Figures</h2>
+          <h2 class="content-head-text">Why travel with us?</h2>
           <p class="article-text">
           <ul>
             <li>Twenty-eight consecutive years of profitable operations.</li>
