--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 	<!-- Use the main area to add contents within the website -->
 	<main>
 		<section class="intro-section">
-			<p>Whether you are travelling for business or leisure, CanGo Airways can always help you book flights on
-				your trip.
-				Start planning your journey with just a few clicks. When you book on <span
+			<p>Leisure or business, travelling is always special. CanGo Airways can always help you book flights 
+				on your trip. Start planning your journey with just a few clicks. 
+				When you book on  <span
 					style="color: #f2f2f2;">cangoairways.com</span>,
 				you will have the world right at your fingertips.</p>
 		</section>
