Increased font size for higher resolution displays

--- a/html/about.html
+++ b/html/about.html
@@ -20,6 +20,12 @@
       background-color: #150941;
     }
 
+    @media screen and (min-width: 2048px) {
+      body {
+        font-size: 24px;
+      }
+    }
+
     footer {
       left: 0;
       bottom: 0;
@@ -112,16 +118,16 @@
         <article class="article-content">
           <h3 class="content-head-text">World Class Experience</h3>
           <p class="article-text">
-            CanGo Airways offers the best in the airline industry’s most ranges of in-flight 
-            cabins experience across its long-haul and short-haul networks. It is one of the 
-            worldwide airlines to offer four cabins on long-distance flights and remains strongly 
-            committed to providing unparallel experience in economy and premium class cabin. 
+            CanGo Airways offers the best in the airline industry’s most ranges of in-flight
+            cabins experience across its long-haul and short-haul networks. It is one of the
+            worldwide airlines to offer four cabins on long-distance flights and remains strongly
+            committed to providing unparallel experience in economy and premium class cabin.
             It means the airline can offer incomparable quality service and for the money fares for all customers.
           </p>
           <p class="article-text">
-            The CanGo airline implemented plans in 2009 in a major upgrade of the airline’s 
-            in-flight entertainment systems in all cabins. The introduction of ‘audio, visual contents’ 
-            means that customers can select a performance, movies or music content and control as they 
+            The CanGo airline implemented plans in 2009 in a major upgrade of the airline’s
+            in-flight entertainment systems in all cabins. The introduction of ‘audio, visual contents’
+            means that customers can select a performance, movies or music content and control as they
             prefer during the flight, during rest, eat or work.
           </p>
         </article>
