--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 			background-color: #150941;
 		}
 
+		@media screen and (min-width: 2048px) {
+			body {
+				font-size: 24px;
+			}
+		}
+
 		footer {
 			left: 0;
 			bottom: 0;
@@ -68,10 +74,9 @@
 	<!-- Use the main area to add contents within the website -->
 	<main>
 		<section class="intro-section">
-			<p>Leisure or business, travelling is always special. CanGo Airways can always help you book flights 
-				on your trip. Start planning your journey with just a few clicks. 
-				When you book on  <span
-					style="color: #f2f2f2;">cangoairways.com</span>,
+			<p>Leisure or business, travelling is always special. CanGo Airways can always help you book flights
+				on your trip. Start planning your journey with just a few clicks.
+				When you book on <span style="color: #f2f2f2;">cangoairways.com</span>,
 				you will have the world right at your fingertips.</p>
 		</section>
 
