Added covid alert in home page

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
 
 				<input type="submit" value="Show Flights">
 			</form>
+			<div class="alert">
+				<i class="fa fa-info-circle"></i> Important: COVID-19 guidelines and restrictions for your destination. 
+				<a href="#">Read Now</a>
+			</div>
 		</section>
 		<br>
 		<picture>
