Added Flight Information Page

--- a/html/about.html
+++ b/html/about.html
@@ -26,6 +26,12 @@
       }
     }
 
+    @media screen and (max-width: 400px) {
+			h1 {
+				font-size: 35px;
+			}
+		}
+
     footer {
       left: 0;
       bottom: 0;
@@ -72,6 +78,7 @@
   <!-- Use the main area to add contents within the website -->
   <main>
     <section class="article-container">
+      <h2 class="content-head-text">About Us</h2>
       <div>
         <aside class="image-container">
           <picture>
@@ -124,12 +131,13 @@
             committed to providing unparallel experience in economy and premium class cabin.
             It means the airline can offer incomparable quality service and for the money fares for all customers.
           </p>
-          <p class="article-text">
+          <details class="article-text">
+            <summary>Know more</summary>
             The CanGo airline implemented plans in 2009 in a major upgrade of the airline’s
             in-flight entertainment systems in all cabins. The introduction of ‘audio, visual contents’
             means that customers can select a performance, movies or music content and control as they
             prefer during the flight, during rest, eat or work.
-          </p>
+          </details>
         </article>
 
         <aside class="rating-container">
@@ -195,16 +203,14 @@
       <div>
         <article class="article-content">
           <h2 class="content-head-text">Why travel with us?</h2>
-          <p class="article-text">
-          <ul>
-            <li>Twenty-eight consecutive years of profitable operations.</li>
-            <li>Market share of 70% as of March 2021.</li>
-            <li>Cango Airways operates the furthest flight in the world.</li>
-            <li>Named as Aon’s Best Employer for the year 1999,2001,2002,2014 and 2018</li>
-            <li>A fleet of 699 aircraft, including 590 new generation A540 NEONs, 101 A333 CEOs, 21 ATRDs and 30 A321
-              NEODs.</li>
-          </ul>
-          </p>
+            <ul class="article-list">
+              <li>Twenty-eight consecutive years of profitable operations.</li>
+              <li>Market share of 70% as of March 2021.</li>
+              <li>Cango Airways operates the furthest flight in the world.</li>
+              <li>Named as Aon’s Best Employer for the year 1999,2001,2002,2014 and 2018</li>
+              <li>A fleet of 699 aircraft, including 590 new generation A540 NEONs, 101 A333 CEOs, 21 ATRDs and 30 A321
+                NEODs.</li>
+            </ul>
         </article>
         <aside class="image-container">
 
