--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 			}
 		}
 
+		@media screen and (max-width: 400px) {
+			h1 {
+				font-size: 35px;
+			}
+		}
+
 		footer {
 			left: 0;
 			bottom: 0;
@@ -73,12 +79,12 @@
 
 	<!-- Use the main area to add contents within the website -->
 	<main>
-		<section class="intro-section">
+		<div class="intro-section">
 			<p>Leisure or business, travelling is always special. CanGo Airways can always help you book flights
 				on your trip. Start planning your journey with just a few clicks.
 				When you book on <span style="color: #f2f2f2;">cangoairways.com</span>,
 				you will have the world right at your fingertips.</p>
-		</section>
+		</div>
 
 		<section class="search-form">
 			<h3>Book Flight</h3>
@@ -124,7 +130,7 @@
 				<input type="submit" value="Show Flights">
 			</form>
 			<div class="alert">
-				<i class="fa fa-info-circle"></i> Important: COVID-19 guidelines and restrictions for your destination. 
+				<i class="fa fa-info-circle"></i> Important: COVID-19 guidelines and restrictions for your destination.
 				<a href="#">Read Now</a>
 			</div>
 		</section>
