--- a/html/about.html
+++ b/html/about.html
@@ -71,7 +71,7 @@
   <nav class="nav-bar" id="nav-bar-id">
     <a href="../index.html">Home</a>
     <a href="#offers">Explore Offers</a>
-    <a href="#contact">Contact Us</a>
+    <a href="contact.html">Contact Us</a>
     <a href="about.html" class="active">About Us</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
