--- a/html/flight-info.html
+++ b/html/flight-info.html
@@ -114,7 +114,7 @@
 	<nav class="nav-bar" id="nav-bar-id">
 		<a href="../index.html" class="active">Home</a>
 		<a href="#offers">Explore Offers</a>
-		<a href="#contact">Contact Us</a>
+		<a href="contact.html">Contact Us</a>
 		<a href="about.html">About Us</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 			<i class="fa fa-bars"></i>
