--- a/html/contact.html
+++ b/html/contact.html
@@ -79,7 +79,7 @@
 			  <input type="text" id="lname" name="lname" placeholder="Last Name" required><br><br>
 			  <label for="email">Email:</label>
 			  <input type="text" id="email" name="email" placeholder="Your email" required><br><br>
-			  <input type="submit" value="Check my booking">
+			  <input type="submit" value="Check My Booking">
 			
 		</form>
 		
