Added Offers page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<!-- Use the nav area to add hyperlinks to other pages within the website -->
 	<nav class="nav-bar" id="nav-bar-id">
 		<a href="index.html" class="active">Home</a>
-		<a href="#offers">Explore Offers</a>
+		<a href="html/offers.html">Explore Offers</a>
 		<a href="html/contact.html">Contact Us</a>
 		<a href="html/about.html">About Us</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
