--- a/html/about.html
+++ b/html/about.html
@@ -70,7 +70,7 @@
   <!-- Use the nav area to add hyperlinks to other pages within the website -->
   <nav class="nav-bar" id="nav-bar-id">
     <a href="../index.html">Home</a>
-    <a href="#offers">Explore Offers</a>
+    <a href="offers.html">Explore Offers</a>
     <a href="contact.html">Contact Us</a>
     <a href="about.html" class="active">About Us</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
