--- a/html/flight-info.html
+++ b/html/flight-info.html
@@ -113,7 +113,7 @@
 	<!-- Use the nav area to add hyperlinks to other pages within the website -->
 	<nav class="nav-bar" id="nav-bar-id">
 		<a href="../index.html" class="active">Home</a>
-		<a href="#offers">Explore Offers</a>
+		<a href="offers.html">Explore Offers</a>
 		<a href="contact.html">Contact Us</a>
 		<a href="about.html">About Us</a>
 		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
