Modified link in offers page

--- a/html/offers.html
+++ b/html/offers.html
@@ -76,8 +76,8 @@
 	<!-- Use the nav area to add hyperlinks to other pages within the website -->
 	<nav class="nav-bar" id="nav-bar-id">
 		<a href="../index.html">Home</a>
-		<a href="offers.html">Explore Offers</a>
-		<a href="contact.html" class="active">Contact Us</a>
+		<a href="offers.html" class="active">Explore Offers</a>
+		<a href="contact.html">Contact Us</a>
 		<a href="about.html">About Us</a>
 		<a href="javascript:void(0);" class="icon" onclick="changeActiveNavigationBar()">
 			<i class="fa fa-bars"></i>
@@ -91,22 +91,43 @@
 			<h2 class="content-head-text">Check Out Offers from Us</h2>
 			<article>
 				<h4>Click on thumbnail to see expanded view</h4>
-				<div class="row">
-					<div class="column">
-						<img src="../images/offer1.png" alt="Clint Daggers 20% Off" style="width:75%"
-							onclick="expandImage(this);">
+				<div class="row-container">
+					<div class="row" style="margin: 10px;">
+						<div class="column">
+							<img src="../images/offer1.png" alt="Clint Daggers 20% Off" style="width:75%"
+								onclick="expandImage(this);">
+						</div>
+						<div class="column">
+							<img src="../images/offer2.png" alt="ABC Apparel Flat 50% Offer" style="width:75%"
+								onclick="expandImage(this);">
+						</div>
+						<div class="column">
+							<img src="../images/offer3.png" alt="Credit Points in XXX Credit Cards" style="width:75%"
+								onclick="expandImage(this);">
+						</div>
+						<div class="column">
+							<img src="../images/offer4.png" alt="Offer from Black Blondes on each ticket" style="width:75%"
+								onclick="expandImage(this);">
+						</div>
 					</div>
-					<div class="column">
-						<img src="../images/offer2.png" alt="ABC Apparel Flat 50% Offer" style="width:75%"
-							onclick="expandImage(this);">
-					</div>
-					<div class="column">
-						<img src="../images/offer3.png" alt="Credit Points in XXX Credit Cards" style="width:75%"
-							onclick="expandImage(this);">
-					</div>
-					<div class="column">
-						<img src="../images/offer4.png" alt="Offer from Black Blondes on each ticket" style="width:75%"
-							onclick="expandImage(this);">
+					<div class="row" style="margin: 10px;">
+						<div class="column">
+							<img src="../images/offer2.png" alt="ABC Apparel Flat 50% Offer" style="width:75%"
+								onclick="expandImage(this);">
+						</div>
+						<div class="column">
+							<img src="../images/offer4.png" alt="Offer from Black Blondes on each ticket" style="width:75%"
+								onclick="expandImage(this);">
+						</div>
+	
+						<div class="column">
+							<img src="../images/offer3.png" alt="Credit Points in XXX Credit Cards" style="width:75%"
+								onclick="expandImage(this);">
+						</div>
+						<div class="column">
+							<img src="../images/offer1.png" alt="Clint Daggers 20% Off" style="width:75%"
+								onclick="expandImage(this);">
+						</div>
 					</div>
 				</div>
 				<br>
