Modified form action in contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -124,7 +124,7 @@
 
 				<article class="article-content">
 					<h3 class="content-head-text">Contact Form</h3>
-					<form action="html/flight-info.html" autocomplete="off">
+					<form action="#" autocomplete="off">
 						<label for="fullname">Full Name</label>
 						<input type="text" id="fullname" name="fullname" placeholder="Your Full Name" required><br>
 
@@ -137,8 +137,8 @@
 						</select><br>
 
 						<label for="subject">Question</label>
-						<textarea id="subject" name="subject" placeholder="Write something.."
-							style="height:200px"></textarea>
+						<textarea id="subject" name="subject" placeholder="Please type your questions/feedback here.."
+							style="height:200px" required></textarea>
 
 						<input type="submit" value="Submit">
 					</form>
