--- a/html/about.html
+++ b/html/about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Website Created By: Abhishek Vijayan Nair, Amal Thomas, Grace Tshimoa, Jith Koshy, Suchitra Rajrao | 15/04/2021-->
 <html lang="en">
 
 <head>
@@ -24,9 +25,23 @@
       font-size: 45px;
     }
 
-    @media screen and (max-width: 550px) {
+    @media screen and (max-width: 600px) {
       .heading-text {
         font-size: 35px;
+      }
+      
+      .heading-sub-text {
+        font-size: 10px;
+      }
+    }
+
+    @media screen and (max-height: 600px) {
+      .heading-text {
+        font-size: 35px;
+      }
+      
+      .heading-sub-text {
+        display: none;
       }
     }
 
@@ -63,7 +78,7 @@
 			<h1 class="heading-text">
 				<span class="core-color">CanGo</span> Airways
 			</h1>
-			<p>Travel safely with us</p>
+			<h4 class="heading-sub-text">Travel safely with us</h4>
 		</div>
 	</header>
 
