--- a/html/contact.html
+++ b/html/contact.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Website Created By: Abhishek Vijayan Nair, Amal Thomas, Grace Tshimoa, Jith Koshy, Suchitra Rajrao | 15/04/2021-->
 <html lang="en">
 
 <head>
@@ -18,6 +19,7 @@
 			height: 100%;
 			margin: 0;
 			font-family: 'Crimson Pro', serif;
+			font-size: 16px;
 			background-color: #150941;
 		}
 
@@ -25,13 +27,23 @@
 			font-size: 45px;
 		}
 
-		@media screen and (max-width: 550px) {
+		@media screen and (max-width: 600px) {
 			.heading-text {
 				font-size: 35px;
 			}
 
-			.contact-image {
-				width: 90%;
+			.heading-sub-text {
+				font-size: 10px;
+			}
+		}
+
+		@media screen and (max-height: 600px) {
+			.heading-text {
+				font-size: 35px;
+			}
+
+			.heading-sub-text {
+				display: none;
 			}
 		}
 
@@ -75,7 +87,7 @@
 			<h1 class="heading-text">
 				<span class="core-color">CanGo</span> Airways
 			</h1>
-			<p>Travel safely with us</p>
+			<h4 class="heading-sub-text">Travel safely with us</h4>
 		</div>
 	</header>
 
