--- a/html/offers.html
+++ b/html/offers.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Website Created By: Abhishek Vijayan Nair, Amal Thomas, Grace Tshimoa, Jith Koshy, Suchitra Rajrao | 15/04/2021-->
 <html lang="en">
 
 <head>
@@ -18,6 +19,7 @@
 			height: 100%;
 			margin: 0;
 			font-family: 'Crimson Pro', serif;
+			font-size: 16px;
 			background-color: #150941;
 		}
 
@@ -25,13 +27,23 @@
 			font-size: 45px;
 		}
 
-		@media screen and (max-width: 550px) {
+		@media screen and (max-width: 600px) {
 			.heading-text {
 				font-size: 35px;
 			}
 
-			.contact-image {
-				width: 90%;
+			.heading-sub-text {
+				font-size: 10px;
+			}
+		}
+
+		@media screen and (max-height: 600px) {
+			.heading-text {
+				font-size: 35px;
+			}
+
+			.heading-sub-text {
+				display: none;
 			}
 		}
 
@@ -69,7 +81,7 @@
 			<h1 class="heading-text">
 				<span class="core-color">CanGo</span> Airways
 			</h1>
-			<p>Travel safely with us</p>
+			<h4 class="heading-sub-text">Travel safely with us</h4>
 		</div>
 	</header>
 
@@ -88,7 +100,7 @@
 	<!-- Use the main area to add contents within the website -->
 	<main>
 		<section class="article-container">
-			<h2 class="content-head-text">Check Out Offers from Us</h2>
+			<h2 class="content-head-text">Check Out Offers from our Partners</h2>
 			<article>
 				<h4>Click on thumbnail to see expanded view</h4>
 				<div class="row-container">
@@ -106,8 +118,8 @@
 								onclick="expandImage(this);">
 						</div>
 						<div class="column">
-							<img src="../images/offer4.png" alt="Offer from Black Blondes on each ticket" style="width:75%"
-								onclick="expandImage(this);">
+							<img src="../images/offer4.png" alt="Offer from Black Blondes on each ticket"
+								style="width:75%" onclick="expandImage(this);">
 						</div>
 					</div>
 					<div class="row" style="margin: 10px;">
@@ -116,10 +128,10 @@
 								onclick="expandImage(this);">
 						</div>
 						<div class="column">
-							<img src="../images/offer4.png" alt="Offer from Black Blondes on each ticket" style="width:75%"
-								onclick="expandImage(this);">
+							<img src="../images/offer4.png" alt="Offer from Black Blondes on each ticket"
+								style="width:75%" onclick="expandImage(this);">
 						</div>
-	
+
 						<div class="column">
 							<img src="../images/offer3.png" alt="Credit Points in XXX Credit Cards" style="width:75%"
 								onclick="expandImage(this);">
