--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<a href="html/offers.html">Explore Offers</a>
 		<a href="html/contact.html">Contact Us</a>
 		<a href="html/about.html">About Us</a>
-		<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+		<a href="javascript:void(0);" class="icon" onclick="changeActiveNavigationBar()">
 			<i class="fa fa-bars"></i>
 		</a>
 	</nav>
@@ -168,7 +168,7 @@
 		<br>
 	</footer>
 	<script>
-		function myFunction() {
+		function changeActiveNavigationBar() {
 			var x = document.getElementById("nav-bar-id");
 			if (x.className === "nav-bar") {
 				x.className += " responsive";
