Added custom design for scrollbar

--- a/html/flight-info.html
+++ b/html/flight-info.html
@@ -11,6 +11,7 @@
 	<link href='../css/homebanner.css' rel='stylesheet'>
 	<link href='../css/flight-info.css' rel='stylesheet'>
 	<link href='../css/navbar.css' rel='stylesheet'>
+	<link href='../css/scrollbar.css' rel='stylesheet'>
 	<style>
 		body,
 		html {
@@ -155,7 +156,7 @@
 
 		<section class="content-container">
 			<h2>Flight Information</h2>
-			<div class="info-container">
+			<div class="info-container" id="scroll-style">
 				<div class="flex-container">
 					<div class="flex-item-left card-container">
 						<div class="card">
