--- a/html/offers.html
+++ b/html/offers.html
@@ -13,6 +13,7 @@
 	<link href='../css/offers.css' rel='stylesheet'>
 	<link href='../css/about.css' rel='stylesheet'>
 	<link href='../css/navbar.css' rel='stylesheet'>
+	<link href='../css/scrollbar.css' rel='stylesheet'>
 	<style>
 		body,
 		html {
@@ -103,7 +104,7 @@
 			<h2 class="content-head-text">Check Out Offers from our Partners</h2>
 			<article>
 				<h4>Click on thumbnail to see expanded view</h4>
-				<div class="row-container">
+				<div class="row-container" id="scroll-style">
 					<div class="row" style="margin: 10px;">
 						<div class="column">
 							<img src="../images/offer1.png" alt="Clint Daggers 20% Off" style="width:75%"
