Added Title icon and Commented CSS and HTML Code

--- a/html/offers.html
+++ b/html/offers.html
@@ -148,7 +148,7 @@
 				<br>
 				<figure class="container">
 					<span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-					<img id="expandedImage">
+					<img id="expandedImage" src="#" alt="expanded image of thumbnail">
 					<figcaption id="imgtext"></figcaption>
 				</figure>
 			</article>
