--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link href='css/homebanner.css' rel='stylesheet'>
 	<link href='css/index.css' rel='stylesheet'>
 	<link href='css/navbar.css' rel='stylesheet'>
+	<link rel="icon" type="image/icon" href="favicon.ico">
 	<style>
 		body,
 		html {
