--- a/html/contact.html
+++ b/html/contact.html
@@ -160,7 +160,7 @@
 				<h2 class="content-head-text">Located At</h2>
 				<iframe
 					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d92220.66542652197!2d-79.51203848290764!3d43.75426066248654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b322ec4918c75%3A0xfb330d877abf7e3d!2sNorth%20York%2C%20Toronto%2C%20ON%2C%20Canada!5e0!3m2!1sen!2sin!4v1618958855939!5m2!1sen!2sin"
-					width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+					height="450" style="border:0;width:100%;" allowfullscreen="" loading="lazy"></iframe>
 			</section>
 			<br>
 		</section>
