--- a/html/flight-info.html
+++ b/html/flight-info.html
@@ -12,6 +12,7 @@
 	<link href='../css/flight-info.css' rel='stylesheet'>
 	<link href='../css/navbar.css' rel='stylesheet'>
 	<link href='../css/scrollbar.css' rel='stylesheet'>
+	<link rel="icon" type="image/icon" href="../favicon.ico">
 	<style>
 		body,
 		html {
