--- a/html/contact.html
+++ b/html/contact.html
@@ -13,6 +13,7 @@
 	<link href='../css/contact.css' rel='stylesheet'>
 	<link href='../css/about.css' rel='stylesheet'>
 	<link href='../css/navbar.css' rel='stylesheet'>
+	<link rel="icon" type="image/icon" href="../favicon.ico">
 	<style>
 		body,
 		html {
