--- a/html/offers.html
+++ b/html/offers.html
@@ -14,6 +14,7 @@
 	<link href='../css/about.css' rel='stylesheet'>
 	<link href='../css/navbar.css' rel='stylesheet'>
 	<link href='../css/scrollbar.css' rel='stylesheet'>
+	<link rel="icon" type="image/icon" href="../favicon.ico">
 	<style>
 		body,
 		html {
